unpackaged/main/default/objects/Resource__c/Resource__c.object-meta.xml
<CustomObject>
    <description>A downloadable/viewable resource in the Nexus Resource Center (PDF, Form, Video, Template, or External Link). Files attach via standard ContentDocumentLink. Read by ResourceCenterService; Slug__c drives URL routing.</description>
    <label>Resource</label>
    <nameField>
        <label>Resource Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>