unpackaged/main/default/objects/Resource__c/fields/Announce_At__c.field-meta.xml
<CustomField>
    <fullName>Announce_At__c</fullName>
    <description>Webinar only. When the Arc announcement goes live (UTC). Blank means 8:00 AM in the org&#39;s time zone on the event&#39;s local date — or the day before when the event starts earlier than that (WebinarAnnouncementService.effectiveAnnounceAt). Must be before Event_Datetime__c; ResourceAdminController.saveResource enforces it.</description>
    <label>Announce at</label>
    <type>DateTime</type>
</CustomField>