unpackaged/main/default/objects/Resource__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <description>Who the resource is for. The event detail page shows the values as chips in the eyebrow line above the title and as a &quot;Who this is for&quot; line; the admin console edits it as a checkbox group. Values are the user tiers the training schedule speaks to.</description>
    <label>Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lite users</fullName>
            </value>
            <value>
                <fullName>Full users</fullName>
            </value>
            <value>
                <fullName>Retirement plan advisors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>