unpackaged/main/default/objects/Resource__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The category this resource belongs to.</description>
    <label>Category</label>
    <referenceTo>Resource_Category__c</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>