unpackaged/main/default/objects/Resource__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The full body shown on the detail page — rich text since 2026-09-07 (authors write bullets for a webinar&#39;s agenda). Every list surface (cards, search hits, the events page, the Arc announcement) reads the PLAIN-TEXT form via ResourceCenterService.plainText and prefers Summary__c when it is set. Converted from a 4000-char long text area; existing plain text renders unchanged.</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>