unpackaged/main/default/objects/Resource__c/fields/Download_Count__c.field-meta.xml
<CustomField>
    <fullName>Download_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Incremented on download by ResourceDownloadTracker (fire-and-forget). Concurrent increments may occasionally drop one — analytics-grade, not audit-grade.</description>
    <label>Download Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>