unpackaged/main/default/objects/Resource__c/fields/Event_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Event_Datetime__c</fullName>
    <description>When the webinar happens (UTC; shown in the viewer&#39;s timezone). Required when Resource_Type__c = Webinar (Webinar_Requires_Event_Datetime). Drives the derived lifecycle in WebinarLifecycle: Upcoming while in the future, Past/Recorded once it has passed.</description>
    <label>Event Date/Time</label>
    <type>DateTime</type>
</CustomField>