unpackaged/main/default/objects/Resource__c/fields/Event_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Event_Duration_Minutes__c</fullName>
    <description>Planned length of the webinar in whole minutes. Optional, display only (agenda row and detail page meta line); used only when Resource_Type__c = Webinar.</description>
    <label>Event Duration (Minutes)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>