unpackaged/main/default/objects/Resource__c/fields/External_URL__c.field-meta.xml
<CustomField>
    <fullName>External_URL__c</fullName>
    <description>Destination URL. Required and used only when Resource_Type__c = External Link.</description>
    <label>External URL</label>
    <type>Url</type>
</CustomField>