unpackaged/main/default/objects/Resource__c/fields/Is_Featured__c.field-meta.xml
<CustomField>
    <fullName>Is_Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Surfaced in the featured strip on the Resource Center landing page.</description>
    <label>Is Featured</label>
    <type>Checkbox</type>
</CustomField>