unpackaged/main/default/objects/Resource__c/fields/Presenter__c.field-meta.xml
<CustomField>
    <fullName>Presenter__c</fullName>
    <description>Who presents the webinar (free text, e.g. a name and title). Optional, display only; used only when Resource_Type__c = Webinar.</description>
    <label>Presenter</label>
    <length>120</length>
    <type>Text</type>
</CustomField>