unpackaged/main/default/objects/Resource__c/fields/Registration_URL__c.field-meta.xml
<CustomField>
    <fullName>Registration_URL__c</fullName>
    <description>Sign-up link for an upcoming webinar. Required while Resource_Type__c = Webinar and Event_Datetime__c is in the future (Webinar_Upcoming_Requires_Registration); the &quot;Sign up&quot; CTA on the landing agenda, cards, and detail page opens it in a new tab.</description>
    <label>Registration URL</label>
    <type>Url</type>
</CustomField>