unpackaged/main/default/objects/Resource__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>One sentence under the title on the detail page, and the subtitle on cards, search hits, the events page and the Arc announcement when set (Description__c&#39;s plain text is the fallback). Authored, never derived by truncating the description.</description>
    <label>Summary</label>
    <length>160</length>
    <type>Text</type>
</CustomField>