unpackaged/main/default/objects/Resource__c/fields/Video_Embed_URL__c.field-meta.xml
<CustomField>
    <fullName>Video_Embed_URL__c</fullName>
    <description>YouTube/Vimeo embed URL. Required and used only when Resource_Type__c = Video.</description>
    <label>Video Embed URL</label>
    <type>Url</type>
</CustomField>